hphp/test/quick/recurse-reentry.php.expectf
HipHop Fatal error: Stack overflow in %s on line 4
